Boopblr - 3.6.3
  * Updated Jumblr Version
  * Added an extra error check to updateQueue

Boopblr - 3.6.2
  * Updated Jumblr Version
  * Fixed a crash when trying follow a post link with a slug
  * Moved post queuing over to jumblr
  * Fixed photo check loops
  * Fixed get all tags loop
  * Fixed tags just being broadcasted
  * Fixed a crash with getallnotes
  * Removed The Force sum option it's now on by default
  * Reworked how queue scanning works. It's way simpler now!
  * Added Queue Sum Caching!
  * Fixed a bug in photo queue checking
  * Added the hash_life option
  * Fixed the stopping while hashing bug
  * Fixed a ram eating bug

Boopblr - 3.6.1
  * Fixed the tag blacklist not always being followed
  * Fixed a crashed bug
  * Added Jumblr
  * Fixed a bug where hash checking was not showing

Boopblr - 3.6.0
  * Cleaned up the license and the readme!
  * Fixed tags blacklist not being followed
  * Fixed the add tag dupe issue
  * Removed The Cache File
  * Made logging simpler
  * Fixed the endless queue bug
  * Merged the two config files into one.