@@ -18,17 +18,18 @@ public class Main {
 	}
 
 	private static void MasterLoop() {
-		
-		//Define needed classes
+
+		// Define needed classes
 		OnlineCheck onlineCheck = new OnlineCheck();
 		Config Conf = new Config();
 		Logger logger = new Logger();
-		BlogInfo blog = new BlogInfo(Conf.getCustomerKey(), Conf.getCustomerSecret(), Conf.getToken(), Conf.getTokenSecret());
+		BlogInfo blog = new BlogInfo(Conf.getCustomerKey(), Conf.getCustomerSecret(), Conf.getToken(),
+				Conf.getTokenSecret());
 		UpdateQueueCache cache = new UpdateQueueCache();
-		
-		//QueueCache Life Time
+
+		// QueueCache Life Time
 		int QueueCacheLife = 0;
-		
+
 		// EndLess Loop!
 		while (true) {
 			if (onlineCheck.getFancyName() == null) {
@@ -36,9 +37,10 @@ public class Main {
 				// So Fill In Everything!
 				onlineCheck.Check();
 				if (onlineCheck.isOnline()) {
-					//Update Queue Count
+					// Update Queue Count
 					blog.getBlog(Conf.getBlogName());
-					logger.Log("Welcome " + onlineCheck.getFancyName() + "! Please Wait While I Get Everything Ready", 0, false);
+					logger.Log("Welcome " + onlineCheck.getFancyName() + "! Please Wait While I Get Everything Ready",
+							0, false);
 					logger.Log("Updating Queue Count!", 0, false);
 					logger.Log("Currently " + blog.getQueueCount() + " Posts In Queue!", 0, false);
 					logger.Log("Building queue hash cache", 0, false);
@@ -57,12 +59,13 @@ public class Main {
 				if (blog.getQueueCount() < Conf.getQueueSize()) {
 					logger.Log("Trying To Queue Another Post", 0, false);
 					QueueCacheLife++;
-					if(QueueCacheLife >= Conf.getHashLife()){
+					if (QueueCacheLife >= Conf.getHashLife()) {
 						logger.Log("Rebuilding queue hash cache", 0, false);
 						Cache.QueueHashes.clear();
 						cache.getQueueCache();
 						QueueCacheLife = 0;
 					}
+					CleanIDs();
 					new FindPost();
 				} else {
 					logger.Log("Waiting " + Conf.getPostSpeed() + " Sec Before Trying Again", 0, false);
@@ -76,6 +79,35 @@ public class Main {
 					blog.getBlog(Conf.getBlogName());
 					logger.Log("Currently " + blog.getQueueCount() + " Posts In Queue!", 0, false);
 				}
+			}
+		}
+	}
+
+	private static void CleanIDs() {
+
+		Config Conf = new Config();
+		Logger logger = new Logger();
+
+		// Check if we should try and clear out the bad ID Cache
+
+		if (Conf.getShouldCleanBadIDs()) {
+			// Check if it's been cleaned yet
+			if (Cache.lastClean != null) {
+
+				// If it has been longer then X time clean the bad post ID cache
+				if (System.currentTimeMillis() > (Cache.lastClean + (Conf.getBadIDCleanTime() * 1000))) {
+
+					// It has been longer then the requested time so clear
+					// The cache now
+					Cache.BadPostIDs.clear();
+					logger.Log("Cleared The Bad Post ID Cache!", 0, false);
+				}
+
+			} else {
+
+				// Set the time as now and do nonthing else
+				Cache.lastClean = System.currentTimeMillis();
+
 			}
 		}
 	}
