@@ -9,4 +9,8 @@ public class Cache {
 	public static List<String> QueueHashes = new ArrayList<String>();
 	public static String CurrentPostHash = "";
 	
+	//Bad Post ID Caching
+	public static List<Long> BadPostIDs = new ArrayList<Long>();
+	public static Long lastClean;
+	
 }
